<resources>
    <string name="app_name">HERDMAN</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="logo">Logo</string>

    <string name="email">e-mail</string>
    <string name="password">password</string>

    <string name="stay_signed_in">Stay signed in?</string>
    <string name="log_in">log in</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>